--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "dependencies": {
     "axios": "0.18.1",
+    "node-sass": "^4.13.0",
+    "npm-run-all": "^4.1.5",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm-run-all -p watch-css start-app",
+    "build": "react-scripts build && npm run build-css",
+    "build-css": "node-sass ./src/style/style.scss -o ./src",
+    "watch-css": "node-sass -wr ./src/style/style.scss -o ./src",
+    "start-app": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
